<?xml version="1.0" ?>
<package>
  <name>euler_navigation_demo</name>
  <version>0.0.0</version>
  <description>Demo for simulating navigation with the euler robot.</description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <author email="davidvlu@gmail.com">David V. Lu!!</author>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>