<?xml version="1.0" ?>
<package>
  <name>euler_navigation_demo</name>
  <version>0.0.0</version>
  <description>Demo for simulating navigation with the euler robot.</description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <author email="davidvlu@gmail.com">David V. Lu!!</author>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>euler_navigation</run_depend>
  <run_depend>fake_localization</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>stage_ros</run_depend>
  <run_depend>tf</run_depend>
</package>