
<package>
 <name>euler_support</name>
 <version>0.0.0</version>
 <description>
  <p>
      ROS Industrial support for the Euler mobile platform.
    </p>
  <p>
      This package contains configuration data, 3D models and launch files
      for the Euler mobile manipulator.
    </p>
  <p>
   <b>Specifications</b>
  </p>
  <ul>
   <li>Euler - Default</li>
  </ul>
  <p>
      Joint limits and maximum joint velocities are based on the information 
      found in the subcomponent documents.
      
      All urdfs are based on the default motion and joint velocity limits, 
      unless noted otherwise.
    </p>
  <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
 </description>
 <author>Paul Hvass</author>
 <maintainer email="paul.hvass@gmail.com"/>
 <license>BSD</license>
 <url type="website">http://ros.org/wiki/euler_support</url>
 <url type="bugtracker">https://github.com/swri-robotics/euler/issues</url>
 <url type="repository">https://github.com/swri-robotics/euler</url>
 <buildtool_depend>catkin</buildtool_depend>
 <build_depend>roslaunch</build_depend>
 <run_depend>xacro</run_depend>
 <run_depend>robot_state_publisher</run_depend>
 <run_depend>rviz</run_depend>
 <run_depend>joint_state_publisher</run_depend>
 <export>
  <architecture_independent/>
 </export>
</package>
