<?xml version="1.0"?>
<package>
  <name>vetex_support</name>
  <version>0.0.0</version>
  <description>The vetex_support package</description>
  <maintainer email="paul.hvass@swri.org">Paul Hvass</maintainer>
  <author>Paul Hvass</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>xacro</run_depend>
</package>
